SDKs/twilio.com/twilio_autopilot_v1/1.37.4/java/README.md
# openapisdk

<!-- Start SDK Installation -->
## SDK Installation

### Gradle

```groovy
implementation 'openapisdk:openapisdk:0.0.1'
```
<!-- End SDK Installation -->

## SDK Example Usage
<!-- Start SDK Example Usage -->
```java
package hello.world;

import openapisdk.SDK;
import openapisdk.models.shared.Security;

public class Application {
    public static void main(String[] args) {
        try {
            SDK.Builder builder = SDK.builder();

            SDK sdk = builder.build();

            CreateAssistantRequest req = new CreateAssistantRequest() {{
                security = new CreateAssistantSecurity() {{
                    accountSidAuthToken = new SchemeAccountSidAuthToken() {{
                        password = "YOUR_PASSWORD_HERE";
                        username = "YOUR_USERNAME_HERE";
                    }};
                }};
                request = new CreateAssistantCreateAssistantRequest() {{
                    callbackEvents = "sit";
                    callbackUrl = "voluptas";
                    defaults = "culpa";
                    friendlyName = "expedita";
                    logQueries = true;
                    styleSheet = "dolor";
                    uniqueName = "expedita";
                }};
            }};

            CreateAssistantResponse res = sdk.createAssistant(req);

            if (res.autopilotV1Assistant.isPresent()) {
                // handle response
            }
        } catch (Exception e) {
            // handle exception
        }
```
<!-- End SDK Example Usage -->

<!-- Start SDK Available Operations -->
## SDK Available Operations

### SDK SDK

* `createAssistant`
* `createField`
* `createFieldType`
* `createFieldValue`
* `createModelBuild`
* `createQuery`
* `createSample`
* `createTask`
* `createWebhook`
* `deleteAssistant`
* `deleteField`
* `deleteFieldType`
* `deleteFieldValue`
* `deleteModelBuild`
* `deleteQuery`
* `deleteSample`
* `deleteTask`
* `deleteWebhook`
* `fetchAssistant`
* `fetchDefaults`
* `fetchDialogue`
* `fetchField`
* `fetchFieldType`
* `fetchFieldValue`
* `fetchModelBuild`
* `fetchQuery`
* `fetchSample`
* `fetchStyleSheet` - Returns Style sheet JSON object for the Assistant
* `fetchTask`
* `fetchTaskActions` - Returns JSON actions for the Task.
* `fetchTaskStatistics`
* `fetchWebhook`
* `listAssistant`
* `listField`
* `listFieldType`
* `listFieldValue`
* `listModelBuild`
* `listQuery`
* `listSample`
* `listTask`
* `listWebhook`
* `updateAssistant`
* `updateDefaults`
* `updateFieldType`
* `updateModelBuild`
* `updateQuery`
* `updateRestoreAssistant`
* `updateSample`
* `updateStyleSheet` - Updates the style sheet for an Assistant identified by `assistant_sid`.
* `updateTask`
* `updateTaskActions` - Updates the actions of an Task identified by {TaskSid} or {TaskUniqueName}.
* `updateWebhook`

<!-- End SDK Available Operations -->

### SDK Generated by [Speakeasy](https://docs.speakeasyapi.dev/docs/using-speakeasy/client-sdks)
